# eosframes

./: .gitignore  Fit_Scalar  README.md  Scaling Quantize Test-Copy1.ipynb  metadata.json  mordred.pkl  new_compounds_output.csv  pipeline.joblib  pyproject.toml  quantizer.py  scalarizer.py  setup.cfg  test.py  test_18.py  test_pipeline.py  test_pipeline_z.py  test_quantize.ipynb  test_quantize.py  test_quantize_binary.py  transform.py  transform_test.ipynb
.ipynb_checkpoints/: Scaled_Quantized_output-checkpoint.csv  test_quantize-checkpoint.ipynb  transform-checkpoint.py  transform_test-checkpoint.ipynb
Drugbank/: drugbank_input.csv  drugbank_output31b.csv  drugbank_output5_scaled.csv  drugbank_output5_scaled2.csv  drugbank_scaled_output5.csv
data frames/: scale_learn.py
data/Drugbank/: drugbank_input5.csv  (+3 more)
data_frames/: quantize.py  quantizer.py  scalarizer.py  scale.py  scaler.py  scalerizer.py
dataframes/: quantize_learn.py  scalarizer.py  scale_learn.py
eos78ao/: metadata.json  pipeline.joblib
files/: output_five.csv  ten_inference.csv
files_output/: new_inference_scaled.csv
model_directory/: metadata.json  pipeline.joblib
modred_dir/: metadata.json
notebooks/: .jupyter_ystore.db  Scaling Quantize Test.ipynb  Untitled.ipynb  boxplots.ipynb  test_quantize.ipynb  transform_test.ipynb
tests/: BuildTypedTransformer.ipynb  abc_data_test.ipynb  boxplots.ipynb  test.py  test2.py  test_18.py  test_pipeline.py  test_quantize.ipynb  test_quantize.py  test_scale_z.py  transform_test.ipynb
zimin_test8/: setup.cfg  test_quantize_binary.py
(+33 files in other folders)
