[tool.poetry]
name = "eosframes"
version = "0.1.0"
description = "Ersilia utilities for working with tabular output data"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=2.0.0"
h5py = ">=3.10.0"
requests = ">=2.31"

[tool.poetry.packages]
include = "eosframes"
