# setup.cfg
[metadata]
name = data-frames
version = 0.1.0
description = Repository to fit data transformations that can be applied to new user-provided data
author = Zimin Qian, Patrick Walsh
author_email = walshp26@stanford.edu
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ersilia-os/ersilia

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    pandas>=1.5
    requests>=2.28
    scikit-learn>=1.2
python_requires = >=3.8

[options.extras_require]
dev =
    pytest>=7.0
    flake8>=4.0